--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.20.0/css/mdb.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         :root {
             --primary-color: #2e7d32;
@@ -77,7 +78,8 @@
             min-height: calc(100vh - 300px);
         }
     </style>
-    {% block extra_css %}{% endblock %}
+    <!-- Add this in the head section -->
+    <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -162,13 +164,13 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="text-uppercase mb-4"><i class="material-icons align-middle">eco</i> Gitako</h5>
                     <p>
-                        Empowering farmers with technology for sustainable agriculture and improved productivity.
+                        {{ site_settings.site_description|default:"Empowering farmers with technology for sustainable agriculture and improved productivity." }}
                     </p>
                     <div class="mt-4">
-                        <a href="#" class="btn btn-floating btn-success me-2"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="btn btn-floating btn-success me-2"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="btn btn-floating btn-success me-2"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="btn btn-floating btn-success me-2"><i class="fab fa-linkedin-in"></i></a>
+                        {% if site_settings.facebook_url %}<a href="{{ site_settings.facebook_url }}" class="btn btn-floating btn-success me-2"><i class="fab fa-facebook-f"></i></a>{% endif %}
+                        {% if site_settings.twitter_url %}<a href="{{ site_settings.twitter_url }}" class="btn btn-floating btn-success me-2"><i class="fab fa-twitter"></i></a>{% endif %}
+                        {% if site_settings.instagram_url %}<a href="{{ site_settings.instagram_url }}" class="btn btn-floating btn-success me-2"><i class="fab fa-instagram"></i></a>{% endif %}
+                        {% if site_settings.linkedin_url %}<a href="{{ site_settings.linkedin_url }}" class="btn btn-floating btn-success me-2"><i class="fab fa-linkedin-in"></i></a>{% endif %}
                     </div>
                 </div>
                 <!-- Update the footer links -->
@@ -194,17 +196,18 @@
                 <div class="col-md-3 mb-4">
                     <h5 class="text-uppercase mb-4">Contact</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><i class="material-icons align-middle me-2">location_on</i> 123 Farm Street, Nairobi, Kenya</li>
-                        <li class="mb-2"><i class="material-icons align-middle me-2">phone</i> +254 700 123 456</li>
-                        <li class="mb-2"><i class="material-icons align-middle me-2">email</i> info@gitako.com</li>
+                        <li class="mb-2"><i class="material-icons align-middle me-2">location_on</i> {{ site_settings.address|default:"123 Farm Street, Lokoja, Nigeria" }}</li>
+                        <li class="mb-2"><i class="material-icons align-middle me-2">phone</i> {{ site_settings.phone|default:"+254 700 123 456" }}</li>
+                        <li class="mb-2"><i class="material-icons align-middle me-2">email</i> {{ site_settings.email|default:"info@gitako.com" }}</li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2023 Gitako Farm Management. All rights reserved.
+            © {% now "Y" %} {{ site_settings.site_name|default:"Gitako Farm Management" }}. All rights reserved.
         </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.20.0/js/mdb.min.js"></script>
