Worked on the profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -197,8 +197,8 @@
                     <h5 class="text-uppercase mb-4">Contact</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><i class="material-icons align-middle me-2">location_on</i> {{ site_settings.address|default:"123 Farm Street, Lokoja, Nigeria" }}</li>
-                        <li class="mb-2"><i class="material-icons align-middle me-2">phone</i> {{ site_settings.phone|default:"+254 700 123 456" }}</li>
-                        <li class="mb-2"><i class="material-icons align-middle me-2">email</i> {{ site_settings.email|default:"info@gitako.com" }}</li>
+                        <li class="mb-2"><i class="material-icons align-middle me-2">phone</i> {{ site_settings.contact_phone|default:"+254 700 123 456" }}</li>
+                        <li class="mb-2"><i class="material-icons align-middle me-2">email</i> {{ site_settings.contact_email|default:"info@gitako.com" }}</li>
                     </ul>
                 </div>
             </div>
