--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,7 +3,7 @@
 {% block title %}Login - Gitako{% endblock %}
 
 {% block content %}
-<div class="row justify-content-center pt-5">
+<div class="row justify-content-center pt-5 mb-5">
     <div class="col-md-3 mt-5">
         <div class="card shadow">
             <div class="card-header bg-success text-white">
