Working on the Budget Feature

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,7 @@
     </style>
     <!-- Add this in the head section -->
     <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'css/financials.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
