--- a/templates/financials/budget_item_confirm_delete.html
+++ b/templates/financials/budget_item_confirm_delete.html
@@ -3,13 +3,13 @@
 
 {% block title %}Delete Budget Item - {{ block.super }}{% endblock %}
 
-{% block content %}
+{% block dashboard_content %}
 <div class="container-fluid py-4">
     <div class="row mb-4">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
                 <div>
-                    <a href="{% url 'financials:budget_detail' budget_item.budget.id %}" class="btn btn-sm btn-outline-primary mb-2">
+                    <a href="{% url 'financials:budget_detail' budget_item.budget.id %}" class="btn btn-sm btn-outline-success mb-2">
                         <i class="fas fa-arrow-left me-1"></i> Back to Budget
                     </a>
                     <h2 class="mb-0">Delete Budget Item</h2>
