--- a/templates/financials/budget_list.html
+++ b/templates/financials/budget_list.html
@@ -3,13 +3,13 @@
 
 {% block title %}Budgets - {{ block.super }}{% endblock %}
 
-{% block content %}
+{% block dashboard_content %}
 <div class="container-fluid py-4">
     <div class="row mb-4">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
                 <h2 class="mb-0">Farm Budgets</h2>
-                <a href="{% url 'financials:budget_create' %}" class="btn btn-primary">
+                <a href="{% url 'financials:budget_create' %}" class="btn btn-success">
                     <i class="fas fa-plus me-2"></i>Create New Budget
                 </a>
             </div>
@@ -64,7 +64,7 @@
                         <i class="fas fa-money-bill-wave fa-4x mb-3 text-muted"></i>
                         <h4>No budgets found</h4>
                         <p class="text-muted">Create your first farm budget to start planning your finances.</p>
-                        <a href="{% url 'financials:budget_create' %}" class="btn btn-primary mt-3">
+                        <a href="{% url 'financials:budget_create' %}" class="btn btn-success mt-3">
                             <i class="fas fa-plus me-2"></i>Create New Budget
                         </a>
                     </div>
